cycles bake artifacts with transparent textures and no color option #50698

Closed
opened 2017-02-16 06:25:23 +01:00 by takateru · 13 comments

System Information
Operating system and graphics card
Windows7, Nvidia GTX 1060

Blender Version
Broken: 2.78a e8299c8
Worked: (optional)

Short description of error

trying to bake mixed shader with transparency with no color option generates too bright area.
non-100% transparency mixing or not transparent materials never generate these issues.
I use these techique for texturing, as seen in the file.

Exact steps for others to reproduce the error
example file: baked_result_too_bright.blend

baked_result_too_bright.jpg

open the file, DON'T change selection, hit bake.
for illustration attaching screenshots from this file

**System Information** Operating system and graphics card Windows7, Nvidia GTX 1060 **Blender Version** Broken: 2.78a e8299c8 Worked: (optional) **Short description of error** trying to bake mixed shader with transparency with no color option generates too bright area. non-100% transparency mixing or not transparent materials never generate these issues. I use these techique for texturing, as seen in the file. **Exact steps for others to reproduce the error** example file: [baked_result_too_bright.blend](https://archive.blender.org/developer/F486404/baked_result_too_bright.blend) ![baked_result_too_bright.jpg](https://archive.blender.org/developer/F486405/baked_result_too_bright.jpg) open the file, DON'T change selection, hit bake. for illustration attaching screenshots from this file
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @terubozu

Added subscriber: @terubozu

Added subscribers: @dfelinto, @Sergey

Added subscribers: @dfelinto, @Sergey
Dalai Felinto was assigned by Sergey Sharybin 2017-02-23 11:27:57 +01:00

@dfelinto, is it something simple for you to have a quick look at? :)

@dfelinto, is it something simple for you to have a quick look at? :)

I will look at it shortly. That said, I heard people complaining about lack of color management and baking. So it may be related

I will look at it shortly. That said, I heard people complaining about lack of color management and baking. So it may be related

Hm this happens only with Path Tracing. If you switch to Branched Path Tracing it doesn't happen.

Attached the same file with a 1x1 baked image for quicker testing: baked_result_too_bright_uno.blend

The final pixel has 1200 rgb.

Hm this happens only with `Path Tracing`. If you switch to `Branched Path Tracing` it doesn't happen. Attached the same file with a 1x1 baked image for quicker testing: [baked_result_too_bright_uno.blend](https://archive.blender.org/developer/F494498/baked_result_too_bright_uno.blend) The final pixel has 1200 rgb.

@Sergey nothing seems wrong in the baking side of it (kernel_bake.h), and since it doesn't happen with branched path I suspect the problem is in Cycles itself. Shall we look at it together any time soon?

@Sergey nothing seems wrong in the baking side of it (`kernel_bake.h`), and since it doesn't happen with branched path I suspect the problem is in Cycles itself. Shall we look at it together any time soon?
Dalai Felinto removed their assignment 2017-02-24 09:51:34 +01:00
Sergey Sharybin was assigned by Dalai Felinto 2017-02-24 09:51:34 +01:00

Added subscriber: @brecht

Added subscriber: @brecht

More debugging in case that helps:

The problem has a direct relation with the background plane (the big one underneath the one we are baking). If both objects have any color in the same channel we see the issue.

For example: the background plane has diffuse rgb(1,0,0), and the baked plane rgb(1,0,0) we see the problem. If they have rgb(1,0,0) and rgb(0,1,1) respectively we don't.

Assigning to @Sergey, though who knows, maybe @brecht (friendly poke) has some time to wander around that instead. Or at least some clues to where to look at.

More debugging in case that helps: The problem has a direct relation with the background plane (the big one underneath the one we are baking). If both objects have any color in the same channel we see the issue. For example: the background plane has diffuse rgb(1,0,0), and the baked plane rgb(1,0,0) we see the problem. If they have rgb(1,0,0) and rgb(0,1,1) respectively we don't. Assigning to @Sergey, though who knows, maybe @brecht (friendly poke) has some time to wander around that instead. Or at least some clues to where to look at.

This issue was referenced by blender/cycles@bf0331828b

This issue was referenced by blender/cycles@bf0331828b967214277ffad2a3a17cba09621f74

This issue was referenced by 8c5826f59a

This issue was referenced by 8c5826f59a37924866ed7dd5bda7fb39c44e8227

Fixed now, path tracing was baking transparent bounces which should not happen. Branched path already disabled it since it's handled differently for camera rays there.

Fixed now, path tracing was baking transparent bounces which should not happen. Branched path already disabled it since it's handled differently for camera rays there.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#50698
No description provided.