Fix T50698: Cycles baking artifacts with transparent surfaces.